--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
 </style>
 
         <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
-<a href="#scroll-tab-1" class="mdl-layout__tab is-active">乳幼児</a>
+<a href="#scroll-tab-1" class="mdl-layout__tab is-active">未就学児</a>
 <a href="#scroll-tab-2" class="mdl-layout__tab">小中学生</a>
-<a href="#scroll-tab-3" class="mdl-layout__tab">青少年</a>
-<a href="#scroll-tab-4" class="mdl-layout__tab">社会人</a>
-<a href="#scroll-tab-5" class="mdl-layout__tab">シニア</a>
+<a href="#scroll-tab-3" class="mdl-layout__tab">高校生～20代</a>
+<a href="#scroll-tab-4" class="mdl-layout__tab">30代～40代</a>
+<a href="#scroll-tab-5" class="mdl-layout__tab">50代～</a>
 
         </div>
 
@@ -299,4 +299,3 @@
 </div>
 
 </html>
-
