--- a/index.html
+++ b/index.html
@@ -285,13 +285,13 @@
             <div class="page-content">小中学生向けイベント</div>
           </section>
           <section class="mdl-layout__tab-panel" id="scroll-tab-3">
-            <div class="page-content">青少年向けイベント</div>
+            <div class="page-content">高校生～20代向けイベント</div>
           </section>
           <section class="mdl-layout__tab-panel" id="scroll-tab-4">
-            <div class="page-content">社会人向けイベント</div>
+            <div class="page-content">30代～40代向けイベント</div>
           </section>
           <section class="mdl-layout__tab-panel" id="scroll-tab-5">
-            <div class="page-content">シニア向けイベント</div>
+            <div class="page-content">50代～向けイベント</div>
           </section>
 
     </main>
