--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             <div class="page-content">50代～向けイベント</div>
           </section>
 
-    <footer class=mdl-mega-footer><div class=mdl-mega-footer__bottom-section><div class=mdl-logo>Copyright© 2016 All Rights Reserved.</div></div></footer>
+    <footer class=mdl-mega-footer><div class=mdl-mega-footer__bottom-section><div class=mdl-logo>Copyright© 2016 株式会社人気組 All Rights Reserved.</div></div></footer>
 
     </main>
 
