--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
   width: calc(100% - 180px);
   padding: 0 60px 0 60px;
 }
+.page-content{
+  min-height: 800px;
+}
 </style>
 
         <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
